--- a/RDSConfig.ini
+++ b/RDSConfig.ini
@@ -12,3 +12,6 @@ DB_PORT     = 5432
 DB_NAME     = dblab04rds02
 DB_USR      = lab04userdb02
 DB_PWD      = eANtUNSKolEr
+
+[DATASET]
+DATASET_NAME = HumanDevelopmentIndex
